# Embedded-Systems---Smart_Meter

./: sdkconfig  sdkconfig.old
main/: CMakeLists.txt  component.mk  main.cpp  program_variables.h
main/bluetooth/: bluetooth.cpp  bluetooth.h
main/certificates/: certificate.pem
main/classes/measurements/: measurements.cpp  measurements.h
main/classes/simulation/: simulation_adc.cpp  simulation_adc.h
main/control/configuration/: configuration.cpp  configuration.h
main/control/rtos/: rtos.cpp  rtos.h
main/databases/: database_variables.h
main/databases/cloud_repository/: cloud_repository.cpp  cloud_repository.h
main/databases/firebase/: firebase_constants.h
main/databases/firebase/rest_api/: rest_api.cpp  rest_api.h
main/databases/persistent_data/: persistent_data.cpp  persistent_data.h
main/internet/ethernet/enc28j60/: esp_eth_mac_enc28j60.c  esp_eth_phy_enc28j60.c  my_enc28j60.cpp  my_enc28j60.h
main/internet/internet/: internet.cpp  internet.h
main/internet/protocol/http/: http.cpp  http.h
main/lorawan/: lorawan.cpp  lorawan.h
main/setup/: setup.cpp  setup.h
